<resources>
    <string name="app_name">Shop App</string>
    <string name="title_home">Home</string>
    <string name="title_cart">Cart</string>
    <string name="title_profile">Profile</string>
    <string name="title_settings">Settings</string>

    <string name="image_profile_text">Profile image:</string>
    <string name="first_name_profile_text">Profile first name:</string>
    <string name="middle_name_profile_text">Profile middle name:</string>
    <string name="last_name_profile_text">Profile last name:</string>
    <string name="email_profile_text">Profile email:</string>
    <string name="currency_profile_text">Currency:</string>
    <string name="theme_profile_text">Theme:</string>

    <string name="btn_profile_text">Save</string>

    <string name="category_all">All</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>