<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.shopapp.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_webFragment3"
            app:destination="@id/webFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_cart"
        android:name="com.example.shopapp.ui.cart.CartFragment"
        android:label="@string/title_cart"
        tools:layout="@layout/fragment_cart" >
        <action
            android:id="@+id/action_navigation_cart_to_webFragment"
            app:destination="@id/webFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.shopapp.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/webFragment"
        android:name="com.example.shopapp.ui.home.WebFragment"
        android:label="fragment_web"
        tools:layout="@layout/fragment_web"
        >
        <argument android:name="address"
            app:argType="string" />
        <argument
            android:name="item"
            app:argType="com.example.shopapp.ui.model.AppItem" />
        <action
            android:id="@+id/action_webFragment_to_navigation_cart"
            app:destination="@id/navigation_cart" />
        <action
            android:id="@+id/action_webFragment_to_navigation_home"
            app:destination="@id/navigation_home" />
    </fragment>
    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.shopapp.ui.settings.SettingsFragment"
        android:label="@string/title_settings" >
        <action
            android:id="@+id/action_navigation_settings_to_authFragment2"
            app:destination="@id/authFragment" />
    </fragment>
    <fragment
        android:id="@+id/authFragment"
        android:name="com.example.shopapp.ui.auth.AuthFragment"
        android:label="AuthFragment" >
        <action
            android:id="@+id/action_authFragment_to_navigation_settings"
            app:destination="@id/navigation_settings" />
    </fragment>
</navigation>